@startuml Tabacaria
'========Produto========='
class Produto {
    - id: Long
    - nome: String
    - descricao: String
    - preco: Double
    - valor: Double
    - qtdNoEstoque: Integer
}

'========Usuario========='
class Pessoa{
    - id: Long
    - senha: String
    - nome: String
    - email: String
    - cpf: String
}

class Telefone {
    - id: Long
    - codigoArea: String
    - numero: String
}
'========Venda========='
class Compra {
    - id: Long
    - data: Date
    - totalCompra: Double
}

class ItemCompra {
    - id: Long
    - quantidade: Integer
    - preco: Double
}

'========Endereço========='
class Endereco {
    - id: Long
    - principal: Boolean
    - logradouro: String
    - bairro: String
    - numero: String
    - complemento: String
    - cep: String
    - cidade: String
    - estado: String
}

'========Relacionamentos========='
Compra "1" *--> "*" ItemCompra
Compra "*" --> "1" Pessoa
Compra "*" --> "1" Endereco

ItemCompra "*" --> "1" Produto

Pessoa "1" *--> "1" Telefone : Principal
Pessoa "1" *--> "1" Telefone : WhatsApp
Pessoa "1" *--> "1" Endereco : Principal
Pessoa "1" *--> "1" Endereco : Reserva

@enduml